Update project config files (#547)
* Fix Semver regex and add tagged docs deployment

* Replace deprecated python setup with twine check

* Update deprecated gems config option

* Fix warning about string conditional statement

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,12 @@ jobs:
     steps:
       - checkout
       - run:
-          name: 'Creating Virtualenv'
+          name: "Creating Virtualenv"
           command: virtualenv venv
       - restore_cache:
           key: v3-requirements-{{ arch }}-{{ checksum "requirements.txt" }}
       - run:
-          name: 'Installing Requirements'
+          name: "Installing Requirements"
           command: |
             . ./venv/bin/activate
             pip install -r requirements.txt
@@ -21,7 +21,7 @@ jobs:
           paths:
             - venv
       - run:
-          name: 'Installing Sceptre'
+          name: "Installing Sceptre"
           command: |
             . ./venv/bin/activate
             pip install .
@@ -38,12 +38,12 @@ jobs:
       - restore_cache:
           key: v4-tox-requirements-{{ arch }}-{{ checksum "requirements.txt" }}-{{ checksum "tox.ini" }}
       - run:
-          name: 'Linting'
+          name: "Linting"
           command: |
             . ./venv/bin/activate
             make lint
       - run:
-          name: 'Unit Test and Coverage'
+          name: "Unit Test and Coverage"
           command: |
             tox
       - store_test_results:
@@ -68,7 +68,7 @@ jobs:
       - attach_workspace:
           at: /home/circleci
       - run:
-          name: 'Integration Testing'
+          name: "Integration Testing"
           command: |
             . ./venv/bin/activate
             behave --junit \
@@ -89,7 +89,7 @@ jobs:
       - restore_cache:
           key: v1-documentation-tools-{{ arch }}-{{ checksum "docs/Gemfile.lock" }}
       - run:
-          name: 'Installing Documentation Tools'
+          name: "Installing Documentation Tools"
           command: |
             . ./venv/bin/activate
             cd docs && make install
@@ -102,9 +102,12 @@ jobs:
             SHORT_SHA1=$(echo $CIRCLE_SHA1 | cut -c -7)
             GIT_TAG=$(git describe --abbrev=0 --tags | sed 's/\./-/g')
             . ./venv/bin/activate
-            if [[ "${CIRCLE_TAG}" =~ ^v[0-9]+\.[0-9]+\.?[0-9]*$ ]]; then
+            if [[ "${CIRCLE_TAG}" =~ ^v([0-9]+)\.([0-9]+)\.([0-9]+)(?:-([0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*))?(?:\+[0-9A-Za-z-]+)?$ ]]; then
               make docs-latest
               aws s3 sync ~/project/docs/_site s3://sceptre.cloudreach.com/latest/ --delete
+              
+              make docs-build-tag
+              aws s3 sync ~/sceptre/docs/_site s3://sceptre.cloudreach.com/$GIT_TAG/ --delete
             elif [[ "${CIRCLE_BRANCH}" == "master" ]]; then
               make docs-build-dev
               aws s3 sync ~/project/docs/_site s3://sceptre.cloudreach.com/dev/ --delete
@@ -116,12 +119,12 @@ jobs:
       - attach_workspace:
           at: /home/circleci
       - run:
-          name: 'Create Distributions'
+          name: "Create Distributions"
           command: |
             . ./venv/bin/activate
             make dist
       - run:
-          name: 'Upload Distributions'
+          name: "Upload Distributions"
           command: |
             . ./venv/bin/activate
             pip install twine
