--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,11 +19,11 @@ description: > # this means to ignore newlines until "baseurl:"
   Build better AWS infrastructure
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://sceptre.cloudreach.com" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  cloudreach
+github_username: cloudreach
 
 # Build settings
 markdown: kramdown
-gems:
+plugins:
   - jekyll-feed
 exclude:
   - Gemfile
