Fix adding implicit dependencies for output resolver
Updates the StackOutputResolver class to add implicit dependencies in
the way that v2 requires them to be added. Also fixes a bug where by
stacks directly under `config/` were prepended with a "/" and thus result
in a dependency key error.

--- a/integration-tests/sceptre-project/config/6/2/C.yaml
+++ b/integration-tests/sceptre-project/config/6/2/C.yaml
@@ -1,4 +1,4 @@
 template_path: dependencies/dependent_template_local_export.json
 region: eu-west-3
 parameters:
-  DependentStackName: !stack_output B.yaml::StackName
+  DependentStackName: !stack_output 6/2/B.yaml::StackName
