--- a/integration-tests/sceptre-project/config/6/1/B.yaml
+++ b/integration-tests/sceptre-project/config/6/1/B.yaml
@@ -1,3 +1,3 @@
 template_path: dependencies/dependent_template.json
 parameters:
-  DependentStackName: !stack_output A.yaml::StackName
+  DependentStackName: !stack_output 6/1/A.yaml::StackName
