--- a/integration-tests/sceptre-project/config/6/2/B.yaml
+++ b/integration-tests/sceptre-project/config/6/2/B.yaml
@@ -1,4 +1,4 @@
 template_path: dependencies/dependent_template_local_export.json
 region: eu-west-2
 parameters:
-  DependentStackName: !stack_output A.yaml::StackName
+  DependentStackName: !stack_output 6/2/A.yaml::StackName
