--- a/integration-tests/sceptre-project/config/6/3/B.yaml
+++ b/integration-tests/sceptre-project/config/6/3/B.yaml
@@ -1,3 +1,3 @@
 template_path: input_output_template.json
 parameters:
-  Input: !stack_output A.yaml::Output
+  Input: !stack_output 6/3/A.yaml::Output
