--- a/integration-tests/sceptre-project/config/6/3/C.yaml
+++ b/integration-tests/sceptre-project/config/6/3/C.yaml
@@ -1,3 +1,3 @@
 template_path: input_output_template.json
 parameters:
-  Input: !stack_output B.yaml::Output
+  Input: !stack_output 6/3/B.yaml::Output
