--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ pytest>=3.2.0,<3.3.0
 PyYaml>=4.2b1,<5.0
 readme-renderer>=24.0
 setuptools>=40.6.2
-six==1.11.0
+six>=1.11.0,<2.0.0
 Sphinx==1.6.5
 tox>=2.9.1,<3.0.0
 troposphere>=2.0.0,<2.1.0
